# homebox-companion

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  FEATURES_ADDED.txt  PR_DOCUMENTATION.md  README.md  RELEASE_NOTES.md  create_homebox_item.py  docker-compose.demo.yml  docker-compose.yml  docker-entrypoint.sh  homebox_demo_adapter.py  homebox_demo_test_adapter.py  output.txt  pyproject.toml  railway.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml
config/: field_preferences.json
demo/: Dockerfile.demo  __init__.py  docker-compose.demo.yml  reset-homebox.sh  seed-demo.sh  seed_demo.py
demo/assets/: README.md  decorations.png.txt  gaming_console.png.txt  instant_pot.png.txt  photo_albums.png.txt  power_drill.png.txt  smart_tv.png.txt  stand_mixer.png.txt  toolbox.png.txt
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: api.ts  index.ts  markdown.ts  types.ts
frontend/src/lib/actions/: expandable.ts  longpress.ts
frontend/src/lib/api/: aiConfig.ts  appPreferences.ts  auth.ts  chat.ts  client.ts  debug.ts  enrichment.ts  index.ts  items.ts  labels.ts  locations.ts  ollama.ts  sessions.ts  settings.ts  vision.ts
frontend/src/lib/components/: AdditionalImagesPanel.svelte  AiCorrectionPanel.svelte  AnalysisProgressBar.svelte  AppContainer.svelte  ApprovalCard.svelte  ApprovalItemPanel.svelte  ApprovalModal.svelte  BackLink.svelte  BottomNav.svelte  Button.svelte  CaptureButtons.svelte  Card.svelte  ChatInput.svelte  ChatMessage.svelte  CollapsibleSection.svelte  ConfirmDialog.svelte  DuplicateWarningBanner.svelte  ExtendedFieldsPanel.svelte  FullscreenPanel.svelte  ImagesPanel.svelte  ItemPickerModal.svelte  Loader.svelte  LocationModal.svelte  LocationPickerModal.svelte  LogViewer.svelte  Modal.svelte  PullToRefresh.svelte  QrScanner.svelte  RecoveryBanner.svelte  SessionExpiredModal.svelte  Skeleton.svelte  StatusIcon.svelte  StepIndicator.svelte  ThumbnailEditor.svelte  Toast.svelte  TokenUsageDisplay.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.json
homebox/: __init__.py  client.py  llm.py  models.py
homebox_vision/: __init__.py  config.py  llm.py  models.py
homebox_vision.egg-info/: PKG-INFO
scripts/: homebox-vision.service  llm_doctor.py
server/: __init__.py  app.py  dependencies.py  main.py  middleware.py
server/api/: __init__.py  ai_config.py  app_preferences.py  auth.py  chat.py  config.py  debug.py  enrichment.py  field_preferences.py  items.py  labels.py  locations.py  logs.py  mcp.py  ollama.py  sessions.py
server/api/tools/: __init__.py  vision.py
server/schemas/: __init__.py  auth.py  enrichment.py  items.py  locations.py  vision.py
server/static/: app.js  index.html  styles.css
src/homebox_companion/: __init__.py
src/homebox_companion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/homebox_companion/ai/: __init__.py  images.py  llm.py  model_allowlist.py  model_capabilities.py  openai.py  prompts.py
src/homebox_companion/chat/: __init__.py  approvals.py  llm_client.py  orchestrator.py  session.py  store.py  stream.py  types.py
src/homebox_companion/core/: __init__.py  ai_config.py  app_preferences.py  config.py  exceptions.py  field_preferences.py  logging.py  rate_limiter.py
src/homebox_companion/homebox/: __init__.py  client.py  models.py  views.py
src/homebox_companion/mcp/: __init__.py  executor.py  server.py  tools.py  types.py
src/homebox_companion/models/: __init__.py  session.py
src/homebox_companion/providers/: __init__.py  litellm_provider.py  ollama.py
src/homebox_companion/services/: __init__.py  debug_logger.py  duplicate_detector.py  enrichment.py  gpu_detector.py  ollama_manager.py  state_manager.py
src/homebox_companion/tools/: __init__.py  base.py
tests/: conftest.py  test_chat.py  test_claude_vision_ai.py  test_client.py  test_detected_item.py  test_error_handling.py  test_field_preferences.py  test_field_preferences_prompts.py  test_history_truncation.py  test_homebox_client.py  test_integration.py  test_llm.py  test_mcp_tools.py  test_model_allowlist.py  test_model_capabilities.py  test_model_capability_validation.py  test_openai_vision_ai.py  test_openrouter_models.py  test_prompts.py  test_rate_limiter.py  test_tool_executor.py
tests/unit/: test_gpu_detector.py  test_ollama_provider.py  test_state_manager.py
(+71 files in other folders)
