[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebox"
version = "0.2.0"
description = "Demo API utilities and OpenAI vision helpers for Homebox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.1",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["homebox*", "server*"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "UP",
    "I",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the real Homebox demo API and OpenAI API.",
]
