[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebox-companion"
version = "1.1.0"
description = "AI-powered companion app for Homebox - detect and catalog household items from photos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["homebox", "inventory", "ai", "vision", "openai", "home-inventory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "openai>=2.8.1",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "loguru>=0.7.3",
]

[project.urls]
Repository = "https://github.com/yourusername/homebox-companion"
Documentation = "https://github.com/yourusername/homebox-companion#readme"

[project.scripts]
homebox-companion = "server.app:run"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["homebox_companion*", "server*"]

[tool.setuptools.package-dir]
"" = "src"
"server" = "server"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "UP",
    "I",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit the real Homebox demo API and OpenAI API.",
]
