[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebox-companion"
version = "2.0.0"
description = "AI-powered companion app for Homebox - detect and catalog household items from photos"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
keywords = ["homebox", "inventory", "ai", "vision", "openai", "home-inventory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
dependencies = [
    "litellm>=1.72.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "loguru>=0.7.3",
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Repository = "https://github.com/Duelion/homebox-companion"
Documentation = "https://github.com/Duelion/homebox-companion#readme"

[project.scripts]
homebox-companion = "server.app:run"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["homebox_companion*", "server*"]

[tool.setuptools.package-dir]
"" = "src"
"server" = "server"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "UP",
    "I",
]

[tool.pytest.ini_options]
# Skip integration tests by default - they hit real APIs (demo.homebox.software, OpenAI)
# Run them explicitly with: uv run pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: tests that hit the real Homebox demo API and OpenAI API.",
]
